--- a/core-service/pyproject.toml
+++ b/core-service/pyproject.toml
@@ -11,5 +11,5 @@ dependencies = [
     "psycopg[binary,pool]>=3.3.2",
     "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
-    "sqlalchemy[asyncio]>=2.0.45",
+    "sqlalchemy[asyncio,postgresql-asyncpg]>=2.0.45",
 ]
