--- a/train-service/pyproject.toml
+++ b/train-service/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiobotocore>=3.0.0",
     "confluent-kafka>=2.12.2",
     "numpy>=2.4.0",
+    "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "scikit-learn>=1.8.0",
 ]
