--- a/train-service/pyproject.toml
+++ b/train-service/pyproject.toml
@@ -7,8 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "aiobotocore>=3.0.0",
     "confluent-kafka>=2.12.2",
+    "httpx>=0.28.1",
     "numpy>=2.4.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "python-jose[cryptography]>=3.5.0",
     "scikit-learn>=1.8.0",
 ]
