--- a/core-service/pyproject.toml
+++ b/core-service/pyproject.toml
@@ -12,4 +12,6 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "sqlalchemy[asyncio,postgresql-asyncpg]>=2.0.45",
     "email-validator==2.3.0",
+    "kafka-python>=2.0.2",
+    "httpx>=0.27.0",
 ]
