--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,6 +65,9 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DATABASE: ${POSTGRES_DATABASE}
       JWT_SECRET: ${JWT_SECRET}
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
+      KAFKA_TOPIC: ${KAFKA_TOPIC_NAME}
+      ARTIFACTS_SERVICE_URL: http://artifacts-service:8000
     depends_on:
       postgres:
         condition: service_healthy
