--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,18 +35,16 @@ services:
       timeout: 5s
       retries: 5
 
-  core-service-migrations:
+  migrations:
     build:
-      context: ./core-service
-      dockerfile: Dockerfile
-    command: ["uv", "run", "alembic", "upgrade", "head"]
+      context: .
+      dockerfile: Dockerfile.migrations
     environment:
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DATABASE: ${POSTGRES_DATABASE}
-      JWT_SECRET: ${JWT_SECRET}
     depends_on:
       postgres:
         condition: service_healthy
@@ -71,33 +69,9 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      core-service-migrations:
+      migrations:
         condition: service_completed_successfully
     restart: unless-stopped
-
-  artifacts-service-migrations:
-    build:
-      context: ./artifacts-service
-      dockerfile: Dockerfile
-    command: ["uv", "run", "alembic", "upgrade", "head"]
-    environment:
-      POSTGRES_HOST: ${POSTGRES_HOST}
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
-      S3_BUCKET: ${S3_BUCKET}
-      S3_ENDPOINT_URL: ${S3_ENDPOINT_URL}
-      S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
-      S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY}
-      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
-      KAFKA_TOPIC_NAME: ${KAFKA_TOPIC_NAME}
-    depends_on:
-      postgres:
-        condition: service_healthy
-      core-service-migrations:
-        condition: service_completed_successfully
-    restart: "no"
 
   artifacts-service:
     build:
@@ -122,7 +96,7 @@ services:
         condition: service_healthy
       minio:
         condition: service_healthy
-      artifacts-service-migrations:
+      migrations:
         condition: service_completed_successfully
     restart: unless-stopped
 
