--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,41 @@ services:
       timeout: 5s
       retries: 5
 
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "2181"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    depends_on:
+      zookeeper:
+        condition: service_healthy
+    ports:
+      - "9092:9092"
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   migrations:
     build:
       context: .
@@ -71,6 +106,8 @@ services:
         condition: service_healthy
       migrations:
         condition: service_completed_successfully
+      kafka:
+        condition: service_healthy
     restart: unless-stopped
 
   artifacts-service:
@@ -98,6 +135,8 @@ services:
         condition: service_healthy
       migrations:
         condition: service_completed_successfully
+      kafka:
+        condition: service_healthy
     restart: unless-stopped
 
   core-service-frontend:
@@ -113,4 +152,5 @@ services:
 volumes:
   postgres_data:
   minio_data:
+  kafka_data:
 
