--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DATABASE=core_db
 
-S3_BUCKET=datasets
+S3_BUCKET=core
 S3_ENDPOINT_URL=http://minio:9000
 S3_ACCESS_KEY_ID=admin
 S3_SECRET_ACCESS_KEY=admin123
@@ -13,6 +13,3 @@ KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 KAFKA_TOPIC_NAME=runs
 
 JWT_SECRET=secret
-
-MINIO_ROOT_USER=admin
-MINIO_ROOT_PASSWORD=admin123
