--- a/artifacts-service/pyproject.toml
+++ b/artifacts-service/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "sqlalchemy[asyncio,postgresql-asyncpg]>=2.0.45",
     "email-validator==2.3.0",
+    "python-jose[cryptography]>=3.5.0",
 ]
 
