--- a/train-service/pyproject.toml
+++ b/train-service/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiobotocore>=3.0.0",
     "confluent-kafka>=2.12.2",
+    "fastapi[standard]>=0.128.0",
     "httpx>=0.28.1",
     "numpy>=2.4.0",
     "pydantic>=2.12.5",
