--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -157,6 +157,7 @@ services:
       KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       KAFKA_TOPIC: ${KAFKA_TOPIC_NAME}
       CORE_BASE_URL: http://core-service:8000
+      ARTIFACTS_BASE_URL: http://artifacts-service:8000
     depends_on:
       postgres:
         condition: service_healthy
@@ -185,6 +186,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       KAFKA_TOPIC_NAME: ${KAFKA_TOPIC_NAME}
+      CORE_BASE_URL: http://core-service:8000
     depends_on:
       postgres:
         condition: service_healthy
